--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -78,7 +78,7 @@
   }
   .modal-content {
     padding: 100px 0;
-    text-align: center;
+    text-align: left;
     h2 {
       font-size: 3em;
       margin-bottom: 15px;
