--- a/css/agency.css
+++ b/css/agency.css
@@ -34,7 +34,7 @@ section {
 }
 
 section h2.section-heading {
-  font-size: 40px;
+  font-size: 50px;
   margin-top: 0;
   margin-bottom: 15px;
 }
@@ -50,7 +50,7 @@ section h3.section-subheading {
 
 @media (min-width: 768px) {
   section {
-    padding: 150px 0;
+    padding: 50px 0;
   }
 }
 
@@ -183,7 +183,7 @@ header.masthead .intro-text {
 }
 
 header.masthead .intro-text .intro-lead-in {
-  font-size: 22px;
+  font-size: 25px;
   font-style: italic;
   line-height: 22px;
   margin-bottom: 25px;
@@ -204,9 +204,9 @@ header.masthead .intro-text .intro-heading {
     padding-bottom: 200px;
   }
   header.masthead .intro-text .intro-lead-in {
-    font-size: 40px;
+    font-size: 25px;
     font-style: italic;
-    line-height: 40px;
+    line-height: 25px;
     margin-bottom: 25px;
     font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
@@ -219,7 +219,7 @@ header.masthead .intro-text .intro-heading {
   }
 }
 
-.service-heading {
+.interest-heading {
   margin: 15px 0;
   text-transform: none;
 }
