--- a/css/agency.css
+++ b/css/agency.css
@@ -30,12 +30,12 @@ h6 {
 }
 
 section {
-  padding: 100px 0;
+  padding: 25px 0;
 }
 
 section h2.section-heading {
-  font-size: 50px;
-  margin-top: 0;
+  font-size: 40px;
+  margin-top: -10px;
   margin-bottom: 15px;
 }
 
@@ -43,14 +43,14 @@ section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
-  margin-bottom: 75px;
+  margin-bottom: 15px;
   text-transform: none;
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 @media (min-width: 768px) {
   section {
-    padding: 50px 0;
+    padding: 25px 0;
   }
 }
 
@@ -183,11 +183,11 @@ header.masthead .intro-text {
 }
 
 header.masthead .intro-text .intro-lead-in {
-  font-size: 25px;
-  font-style: italic;
-  line-height: 22px;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;;
+  font-size: 18px;
+  font-style: ;
+  line-height: 25px;
   margin-bottom: 25px;
-  font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 header.masthead .intro-text .intro-heading {
@@ -204,11 +204,11 @@ header.masthead .intro-text .intro-heading {
     padding-bottom: 200px;
   }
   header.masthead .intro-text .intro-lead-in {
-    font-size: 25px;
-    font-style: italic;
+    font-size: 20px;
+    font-style: ;
     line-height: 25px;
     margin-bottom: 25px;
-    font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   header.masthead .intro-text .intro-heading {
     font-size: 75px;
@@ -220,13 +220,19 @@ header.masthead .intro-text .intro-heading {
 }
 
 .interest-heading {
+  font-size: 20px;
   margin: 15px 0;
   text-transform: none;
+}
+
+.interest-text {
+  font-size: 15px;
 }
 
 #portfolio .portfolio-item {
   right: 0;
   margin: 0 0 15px;
+  max-height: 30;
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -274,15 +280,25 @@ header.masthead .intro-text .intro-heading {
 
 #portfolio .portfolio-item .portfolio-caption {
   max-width: 400px;
+  height: 135px;
+  font-size: auto;
   margin: 0 auto;
   padding: 25px;
   text-align: center;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
   margin: 0;
+  font-size: 15px;
   text-transform: none;
+}
+
+.modal-centered {
+    display: block;
+    margin-left: 0px;
+    margin-right: 0px;
+    align-items: center;
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
@@ -304,20 +320,20 @@ header.masthead .intro-text .intro-heading {
 
 .portfolio-modal {
   padding-right: 0px !important;
+  padding-left: 0px !important;
 }
 
 .portfolio-modal .modal-dialog {
-  margin: 1rem;
-  max-width: 100vw;
+  max-width: 800px;
 }
 
 .portfolio-modal .modal-content {
-  padding: 100px 0;
+  padding: 10px 0;
   text-align: center;
 }
 
 .portfolio-modal .modal-content h2 {
-  font-size: 3em;
+  font-size: 15px;
   margin-bottom: 15px;
 }
 
@@ -366,8 +382,8 @@ header.masthead .intro-text .intro-heading {
 .portfolio-modal .close-modal .lr {
   /* Safari and Chrome */
   z-index: 1051;
-  width: 1px;
-  height: 75px;
+  width: 2px;
+  height: 30px;
   margin-left: 35px;
   /* IE 9 */
   -webkit-transform: rotate(45deg);
@@ -379,8 +395,8 @@ header.masthead .intro-text .intro-heading {
 .portfolio-modal .close-modal .lr .rl {
   /* Safari and Chrome */
   z-index: 1052;
-  width: 1px;
-  height: 75px;
+  width: 2px;
+  height: 30px;
   /* IE 9 */
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
